--- a/STOCKNDRIVE/Sales.resx
+++ b/STOCKNDRIVE/Sales.resx
@@ -167,6 +167,19 @@
         PU3TjQ8j+k7FelEwcc588C/blevR+flkZ12HRdEXu17+KUpnpGoAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="backupbtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAZ1JREFUOE+tVN1twjAYZIS8VMJJpTICIzACI7BB2QDeKpGYdAO6QUfIY6X8NCNk
+        hIyQ3n22wQ4FUqknnVA+n8/f2cYzYhiGFViAU9GDO5k8BgYWIjEisgNPD0gNsbQ2F6DIziigsZjZoZuA
+        Zg0SG1u6wA4QbtUphtwi4qahH/NaNAI0TEPtypYuQJF42NVk+Ib1URVg51hptRWRRbuPoiaPd56mKHUS
+        JgoMM/Xe6PjkiO+1iIDykCxrHXfgUGdxi9/PWsOU38e4/XqbL0ToG94CxbVOekzuq3Qe7FuVxnsxxWJt
+        HkWBoXRlYgsZx5hJZ/1Xbrqo0ucVx8WA39gaMUUtjMwYnmGj55s2X0Q2Wl8enuQis0tqnSG0rzRkQ5Mi
+        m/2TyN34EJo8yWnGRa8i3zsUxvUPQcbNIjgkVbjtCA0ZVSYZjq8NJ5WZ+jCnDA2MSmyLHTbwDf8FvmGV
+        qi2vwT1yn6DnX28P/vraEDayvbh3+J2pF+gfPg5/igy9Mzwf2hkotiAfVvfaTCHnEOZkfaC4BN1bOBVs
+        ILgBBrPZD5asrlwCzRtwAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnaudittrail.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
