--- a/STOCKNDRIVE/Dashboard.resx
+++ b/STOCKNDRIVE/Dashboard.resx
@@ -118,6 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="backupbtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAZ1JREFUOE+tVN1twjAYZIS8VMJJpTICIzACI7BB2QDeKpGYdAO6QUfIY6X8NCNk
+        hIyQ3n22wQ4FUqknnVA+n8/f2cYzYhiGFViAU9GDO5k8BgYWIjEisgNPD0gNsbQ2F6DIziigsZjZoZuA
+        Zg0SG1u6wA4QbtUphtwi4qahH/NaNAI0TEPtypYuQJF42NVk+Ib1URVg51hptRWRRbuPoiaPd56mKHUS
+        JgoMM/Xe6PjkiO+1iIDykCxrHXfgUGdxi9/PWsOU38e4/XqbL0ToG94CxbVOekzuq3Qe7FuVxnsxxWJt
+        HkWBoXRlYgsZx5hJZ/1Xbrqo0ucVx8WA39gaMUUtjMwYnmGj55s2X0Q2Wl8enuQis0tqnSG0rzRkQ5Mi
+        m/2TyN34EJo8yWnGRa8i3zsUxvUPQcbNIjgkVbjtCA0ZVSYZjq8NJ5WZ+jCnDA2MSmyLHTbwDf8FvmGV
+        qi2vwT1yn6DnX28P/vraEDayvbh3+J2pF+gfPg5/igy9Mzwf2hkotiAfVvfaTCHnEOZkfaC4BN1bOBVs
+        ILgBBrPZD5asrlwCzRtwAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnaudittrail.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -1242,5 +1255,8 @@
   </data>
   <metadata name="sqlCommand1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>125, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>37</value>
   </metadata>
 </root>
